--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,8 @@
 @import '../../vars';
 
-.header {
-  padding: 20px 0;
-}
+// .header {
+//   padding: 20px 0;
+// }
 
 @media (max-width: 480px) {
   .header {
